--- a/app/src/main/res/layout/patient_layout.xml
+++ b/app/src/main/res/layout/patient_layout.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="patient"
-            type="com.fisincorporated.wearable.Patient"/>
+            type="com.fisincorporated.wearable.patient.PatientItemViewModel"/>
 
     </data>
 
