--- a/app/src/main/res/layout/patient_layout.xml
+++ b/app/src/main/res/layout/patient_layout.xml
@@ -13,6 +13,7 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/patient_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
