Use jobscheduler for periodic patient updates. Added retrofit, but using canned json response as don't have a server with that info.

--- a/app/src/main/res/layout/patient_layout.xml
+++ b/app/src/main/res/layout/patient_layout.xml
@@ -41,7 +41,7 @@
             android:id="@+id/patient_heart_rate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{String.format(@string/patient_pulse_label, patient.pulse)}"
+            android:text="@{String.format(@string/patient_pulse_label, safeUnbox(patient.pulse))}"
             tools:text="Pulse: 72"/>
 
     </LinearLayout>
